:uri-asciidoctor: http://asciidoctor.org
:icons: font
:source-highlighter: pygments
:nofooter:
link:index.html[Home]

== Mouseless Changelog


## 1.4.6

 . Fixed `openLastDownload` in #127 #138

  

## 1.4.5

 . Updated list of `chrome://` completion URLs when `:chrome` is used
 . Fixed issue with `openPasteTab` [#573](https://github.com/1995eaton/chromium-vim/issues/573)
 . Allow global site matches in cVimrc. For example, the following will unmap `j` on all sites:
```
site '*://*' {
  unmap j
}
```
 . Fix issue with certain hints not showing up (like the GitHub profile icon in the top-right corner of the page).
 . Fix [#569](https://github.com/1995eaton/chromium-vim/issues/569) (mappings like `map <C-A-M-i> nextTab` would work, but `map <C-M-A-i> nextTab` wouldn't)
 . Let `@"` represent the paste buffer in command bar commands (e.g. `tabnew wikipedia "@` would search Wikipedia for whatever is in the paste buffer)
 . Make `^` go to beginning of line when in insert mode
 . Fix vulnerability where sites are able to trigger keyboard events that would be interpreted by cVim ([#572](https://github.com/1995eaton/chromium-vim/issues/572))
  . Added jumplist feature #553 (`previousScrollPosition` is `<C-o>` and `nextScrollPosition` is `<C-i>`).
  . Fixed toggling bookmarks saving url as title and added `toggleWindowBookmarks` as a fixup for already saved bookmarks.
   load all bookmarks in a window and use the command
  . Fixed #572 preventing anyone from sending keyboard events to extension via JS
  

## 1.4.4

  . Fixed #547 site mapping being overwritten
  . Merged refactored code for domain history switching
  . Merged frame/port changes 
  . Fixed editWithVim ajax injection using cross origin domain. Python server can no longer run any unix command. VIM_COMMAND only

## 1.4.3

  . Fixed #529 buffers search 
  . Fixed #115 #114 errors when creating new tab
  . Fixed #108 pasting urls starting by a space now gets trimmed