@@ -511,6 +511,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li>
 <p>Fixed <code>openLastDownload</code> in #127 #138</p>
 </li>
+<li>
+<p>Fixed <code>UnicodeDecodeError: 'ascii' codec can&#8217;t decode byte 0xe2 in position 487: ordinal not in range(128)</code>  in #139</p>
+</li>
 </ol>
 </div>
 </div>
